[gd_scene load_steps=127 format=3 uid="uid://bd2j3uyagvny6"]

[ext_resource type="Script" path="res://Player.gd" id="1_ndj7k"]
[ext_resource type="Texture2D" uid="uid://chhsal0hot4ca" path="res://Player/Fall.png" id="2_nex3s"]
[ext_resource type="Script" path="res://addons/control.gd" id="2_y08b4"]
[ext_resource type="Texture2D" uid="uid://hhns645epw6y" path="res://Player/Idle.png" id="3_fg0ud"]
[ext_resource type="Texture2D" uid="uid://bqg6xx1ut7one" path="res://Player/Jump.png" id="4_i0a06"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="4_igwf6"]
[ext_resource type="Texture2D" uid="uid://b55c2jkkv7fuf" path="res://Player/Walk.png" id="5_7fr5d"]
[ext_resource type="Texture2D" uid="uid://8805h6fv7kes" path="res://Lito-main menu/Assets/darkblue.png" id="5_chl7q"]
[ext_resource type="Theme" uid="uid://bp5fd6elldccx" path="res://Lito-main menu/progress_bar.tres" id="5_n6n11"]
[ext_resource type="Texture2D" uid="uid://crfhxa0yoncai" path="res://Player/SwimIdle.png" id="5_syw3m"]
[ext_resource type="Texture2D" uid="uid://3lywkfwqf2ri" path="res://Lito-main menu/Assets/blue.png" id="6_ekl2b"]
[ext_resource type="PackedScene" uid="uid://drheihyno2ooc" path="res://Physics/WaterDetection2D.tscn" id="6_feefm"]
[ext_resource type="Texture2D" uid="uid://cwm8uxo7favd8" path="res://Player/SwimSide.png" id="6_lt1t4"]
[ext_resource type="PackedScene" uid="uid://b3qg604805n55" path="res://Physics/BorderDetection2D.tscn" id="7_gpa1d"]
[ext_resource type="FontFile" uid="uid://drnckmvhotjsv" path="res://Lito-main menu/Assets/Fonts/GramatikaTrial-Bold-BF65dea4c5530e5.otf" id="7_tidx2"]
[ext_resource type="Texture2D" uid="uid://bv3t3sfmewevy" path="res://Lito-main menu/Assets/control_jump.png" id="8_2klaa"]
[ext_resource type="Texture2D" uid="uid://c00becr4oyt8o" path="res://Lito-main menu/Assets/control_dash.png" id="9_ijxqg"]
[ext_resource type="Script" path="res://Player/Timer.gd" id="9_j7400"]
[ext_resource type="Script" path="res://Player/Menu.gd" id="12_macvu"]
[ext_resource type="Theme" uid="uid://decb5nyu4rg66" path="res://Lito-main menu/Scenes/MainMenu/main_menu.tres" id="12_vj3jh"]
[ext_resource type="Texture2D" uid="uid://cbnxbc3bt43fh" path="res://Lobby/coin.png" id="19_gjs8m"]

[sub_resource type="LabelSettings" id="LabelSettings_2mlyq"]
font = ExtResource("7_tidx2")

[sub_resource type="LabelSettings" id="LabelSettings_4vvcv"]
line_spacing = 1.0
font = ExtResource("7_tidx2")
font_size = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_8rwep"]
atlas = ExtResource("2_nex3s")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8awat"]
atlas = ExtResource("2_nex3s")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdki"]
atlas = ExtResource("2_nex3s")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmgsj"]
atlas = ExtResource("2_nex3s")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubjq4"]
atlas = ExtResource("2_nex3s")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdkk0"]
atlas = ExtResource("2_nex3s")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qb60"]
atlas = ExtResource("2_nex3s")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i44n"]
atlas = ExtResource("2_nex3s")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fw74"]
atlas = ExtResource("2_nex3s")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_f13ky"]
atlas = ExtResource("2_nex3s")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5qfb"]
atlas = ExtResource("2_nex3s")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k52h2"]
atlas = ExtResource("3_fg0ud")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_o26ur"]
atlas = ExtResource("3_fg0ud")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b0ch"]
atlas = ExtResource("3_fg0ud")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0ybf"]
atlas = ExtResource("3_fg0ud")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k103a"]
atlas = ExtResource("3_fg0ud")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_btmgj"]
atlas = ExtResource("3_fg0ud")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8orqy"]
atlas = ExtResource("3_fg0ud")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge6cw"]
atlas = ExtResource("3_fg0ud")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4k1f"]
atlas = ExtResource("3_fg0ud")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_148bp"]
atlas = ExtResource("3_fg0ud")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lklk"]
atlas = ExtResource("3_fg0ud")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cut4"]
atlas = ExtResource("4_i0a06")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbcjv"]
atlas = ExtResource("4_i0a06")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p2gu"]
atlas = ExtResource("4_i0a06")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pvka"]
atlas = ExtResource("4_i0a06")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk72q"]
atlas = ExtResource("4_i0a06")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_15ima"]
atlas = ExtResource("4_i0a06")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yib5o"]
atlas = ExtResource("4_i0a06")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmsms"]
atlas = ExtResource("4_i0a06")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eti8"]
atlas = ExtResource("4_i0a06")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv8f1"]
atlas = ExtResource("4_i0a06")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_msx2a"]
atlas = ExtResource("4_i0a06")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxocj"]
atlas = ExtResource("5_syw3m")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7ey"]
atlas = ExtResource("5_syw3m")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibdn"]
atlas = ExtResource("5_syw3m")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0evy"]
atlas = ExtResource("5_syw3m")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qju10"]
atlas = ExtResource("5_syw3m")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_hts8p"]
atlas = ExtResource("5_syw3m")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d5qs"]
atlas = ExtResource("5_syw3m")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhaaa"]
atlas = ExtResource("5_syw3m")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1pce"]
atlas = ExtResource("5_syw3m")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8awl1"]
atlas = ExtResource("5_syw3m")
region = Rect2(1200, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyqu1"]
atlas = ExtResource("5_syw3m")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfte4"]
atlas = ExtResource("5_syw3m")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5800"]
atlas = ExtResource("5_syw3m")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_bemds"]
atlas = ExtResource("5_syw3m")
region = Rect2(900, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa4f5"]
atlas = ExtResource("5_syw3m")
region = Rect2(1200, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbggq"]
atlas = ExtResource("5_syw3m")
region = Rect2(0, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlnas"]
atlas = ExtResource("5_syw3m")
region = Rect2(300, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_85lif"]
atlas = ExtResource("5_syw3m")
region = Rect2(600, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wore"]
atlas = ExtResource("5_syw3m")
region = Rect2(900, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1vpc"]
atlas = ExtResource("5_syw3m")
region = Rect2(1200, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ufc"]
atlas = ExtResource("5_syw3m")
region = Rect2(0, 1200, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lepum"]
atlas = ExtResource("6_lt1t4")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_xflx3"]
atlas = ExtResource("6_lt1t4")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_unxhm"]
atlas = ExtResource("6_lt1t4")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bmbd"]
atlas = ExtResource("6_lt1t4")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr0je"]
atlas = ExtResource("6_lt1t4")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrec2"]
atlas = ExtResource("6_lt1t4")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xlbj"]
atlas = ExtResource("6_lt1t4")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3idt7"]
atlas = ExtResource("6_lt1t4")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_crlax"]
atlas = ExtResource("6_lt1t4")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhnao"]
atlas = ExtResource("6_lt1t4")
region = Rect2(1200, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_syu7v"]
atlas = ExtResource("6_lt1t4")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaydj"]
atlas = ExtResource("6_lt1t4")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1vpr"]
atlas = ExtResource("6_lt1t4")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qrii"]
atlas = ExtResource("6_lt1t4")
region = Rect2(900, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnk5p"]
atlas = ExtResource("6_lt1t4")
region = Rect2(1200, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkdaf"]
atlas = ExtResource("6_lt1t4")
region = Rect2(0, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_obu2m"]
atlas = ExtResource("6_lt1t4")
region = Rect2(300, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8804"]
atlas = ExtResource("6_lt1t4")
region = Rect2(600, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oor2"]
atlas = ExtResource("6_lt1t4")
region = Rect2(900, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciha8"]
atlas = ExtResource("6_lt1t4")
region = Rect2(1200, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0sht"]
atlas = ExtResource("6_lt1t4")
region = Rect2(0, 1200, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd7cs"]
atlas = ExtResource("5_7fr5d")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_e43f3"]
atlas = ExtResource("5_7fr5d")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_03mxd"]
atlas = ExtResource("5_7fr5d")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_h11po"]
atlas = ExtResource("5_7fr5d")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_trsht"]
atlas = ExtResource("5_7fr5d")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hrni"]
atlas = ExtResource("5_7fr5d")
region = Rect2(0, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k3ua"]
atlas = ExtResource("5_7fr5d")
region = Rect2(300, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0rj5"]
atlas = ExtResource("5_7fr5d")
region = Rect2(600, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcwm6"]
atlas = ExtResource("5_7fr5d")
region = Rect2(900, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pics"]
atlas = ExtResource("5_7fr5d")
region = Rect2(1200, 300, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2h30"]
atlas = ExtResource("5_7fr5d")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_23p1g"]
atlas = ExtResource("5_7fr5d")
region = Rect2(300, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_up6si"]
atlas = ExtResource("5_7fr5d")
region = Rect2(600, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_en3qv"]
atlas = ExtResource("5_7fr5d")
region = Rect2(900, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mm4p"]
atlas = ExtResource("5_7fr5d")
region = Rect2(1200, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8siul"]
atlas = ExtResource("5_7fr5d")
region = Rect2(0, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nl74"]
atlas = ExtResource("5_7fr5d")
region = Rect2(300, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uusc"]
atlas = ExtResource("5_7fr5d")
region = Rect2(600, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuk2n"]
atlas = ExtResource("5_7fr5d")
region = Rect2(900, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_otawe"]
atlas = ExtResource("5_7fr5d")
region = Rect2(1200, 900, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3kxq"]
atlas = ExtResource("5_7fr5d")
region = Rect2(0, 1200, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_m25nk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rwep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8awat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmgsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubjq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdkk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qb60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i44n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fw74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f13ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5qfb")
}],
"loop": false,
"name": &"fall",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k52h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o26ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b0ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0ybf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k103a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btmgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8orqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge6cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4k1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_148bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lklk")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cut4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbcjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p2gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pvka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk72q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15ima")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yib5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmsms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eti8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv8f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msx2a")
}],
"loop": false,
"name": &"jump",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxocj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0evy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qju10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hts8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d5qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhaaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1pce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8awl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyqu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfte4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bemds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa4f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbggq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlnas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85lif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wore")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1vpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ufc")
}],
"loop": true,
"name": &"swim_idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lepum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xflx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bmbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr0je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrec2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xlbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3idt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crlax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhnao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syu7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaydj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1vpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qrii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnk5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkdaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obu2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8804")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oor2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciha8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0sht")
}],
"loop": true,
"name": &"swim_side",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd7cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e43f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03mxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h11po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trsht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hrni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k3ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0rj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcwm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pics")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2h30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23p1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up6si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en3qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mm4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8siul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nl74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuk2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otawe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3kxq")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_1nm3w"]
resource_name = "Idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksa8v"]
_data = {
"Idle": SubResource("Animation_1nm3w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ruuhr"]
size = Vector2(67.1621, 76.1671)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqy56"]
size = Vector2(67, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6f5i"]
size = Vector2(67, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_kcihu"]
radius = 69.0652

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_mask = 15
script = ExtResource("1_ndj7k")
SPEED = 90.0

[node name="ControlMenu" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_y08b4")

[node name="Test" type="Node2D" parent="ControlMenu"]

[node name="UI" type="CanvasLayer" parent="ControlMenu/Test"]

[node name="Virtual joystick left" parent="ControlMenu/Test/UI" instance=ExtResource("4_igwf6")]
anchors_preset = -1
anchor_left = 0.13
anchor_top = 0.756
anchor_right = 0.13
anchor_bottom = 0.756
offset_left = -121.76
offset_top = -115.888
offset_right = 121.24
offset_bottom = 116.112
pressed_color = Color(0.137255, 0.47451, 0.666667, 1)
action_left = "Left"
action_right = "Right"
action_up = "Up"
action_down = "Down"

[node name="StaminaBar" type="TextureProgressBar" parent="ControlMenu/Test/UI"]
offset_left = 335.0
offset_top = 599.0
offset_right = 823.0
offset_bottom = 620.0
theme = ExtResource("5_n6n11")
nine_patch_stretch = true
texture_under = ExtResource("5_chl7q")
texture_progress = ExtResource("6_ekl2b")
tint_under = Color(1, 1, 1, 0.305882)

[node name="Label" type="Label" parent="ControlMenu/Test/UI/StaminaBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -20.5
offset_right = 238.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "STAMINA"
label_settings = SubResource("LabelSettings_2mlyq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right Button" type="Control" parent="ControlMenu/Test/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.14, 0.14)

[node name="TouchScreenButton" type="TouchScreenButton" parent="ControlMenu/Test/UI/Right Button"]
position = Vector2(6928.57, 2357.14)
texture_normal = ExtResource("8_2klaa")
texture_pressed = ExtResource("8_2klaa")
action = "Jump"

[node name="Right Button2" type="Control" parent="ControlMenu/Test/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.14, 0.14)

[node name="TouchScreenButton" type="TouchScreenButton" parent="ControlMenu/Test/UI/Right Button2"]
position = Vector2(5778.57, 2985.71)
texture_normal = ExtResource("9_ijxqg")
texture_pressed = ExtResource("9_ijxqg")
action = "Dash"

[node name="Coin" type="Sprite2D" parent="ControlMenu/Test/UI"]
position = Vector2(209, 58)
scale = Vector2(0.0444444, 0.0444444)
texture = ExtResource("19_gjs8m")

[node name="coin_display" type="Label" parent="ControlMenu/Test/UI"]
offset_left = 244.0
offset_top = 40.0
offset_right = 336.0
offset_bottom = 77.0
size_flags_horizontal = 0
text = "COINS"
label_settings = SubResource("LabelSettings_4vvcv")

[node name="Menu" type="Button" parent="ControlMenu/Test/UI"]
offset_left = 38.0
offset_top = 29.0
offset_right = 161.0
offset_bottom = 90.0
theme = ExtResource("12_vj3jh")
text = "MENU"
script = ExtResource("12_macvu")

[node name="Timer" type="Timer" parent="."]
script = ExtResource("9_j7400")

[node name="player" type="AnimatedSprite2D" parent="."]
position = Vector2(0.448448, -37.5516)
scale = Vector2(0.336323, 0.336323)
sprite_frames = SubResource("SpriteFrames_m25nk")
animation = &"swim_side"
autoplay = "idle"
frame_progress = 0.130069

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_ksa8v")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.381546, -38.7655)
shape = SubResource("RectangleShape2D_ruuhr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -15.5)
shape = SubResource("RectangleShape2D_hqy56")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -15.5)
shape = SubResource("RectangleShape2D_f6f5i")

[node name="WaterDetection2D" parent="." instance=ExtResource("6_feefm")]
visible = false
position = Vector2(0, -15)

[node name="BorderDetection2D" parent="." instance=ExtResource("7_gpa1d")]
visible = false
position = Vector2(0, -15)

[node name="ItemMagnet" type="Area2D" parent="."]
visible = false
position = Vector2(1, -39)

[node name="itemmagnet" type="CollisionShape2D" parent="ItemMagnet"]
shape = SubResource("CircleShape2D_kcihu")

[connection signal="pressed" from="ControlMenu/Test/UI/Menu" to="ControlMenu/Test/UI/Menu" method="_on_pressed"]
[connection signal="water_state_changed" from="WaterDetection2D" to="." method="_on_water_detection_2d_water_state_changed"]
[connection signal="border_state_changed" from="BorderDetection2D" to="." method="_on_border_detection_2d_border_state_changed"]
